<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_1"
        android:title="@string/quote"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_2"
        android:title="@string/materials"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_3"
        android:title="@string/printers"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_4"
        android:title="@string/general"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_5"
        android:title="@string/consumables"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_6"
        android:title="@string/post_processing"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_7"
        android:title="@string/preparation"
        app:showAsAction="never" />
</menu>